# CosmoCLI

./: audio.py  cosmo_prompt.txt  main.py  pyproject.toml  tools.py  util.py
bedrock/: model.py  stream.py
src/cosmocli/: cli.py  cosmo_prompt.txt  tools.py
