[project]
name = "cosmocli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-sdk-bedrock-runtime>=0.0.2",
    "dotenv>=0.9.9",
    "pyaudio>=0.2.14",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
# Enable commonly used rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.format]
# Use single quotes for strings
quote-style = "single"
# Indent with spaces
indent-style = "space"
